Added complete employee management API's
